fixed div vertical align problem

--- a/projects/project4/assets/home.css
+++ b/projects/project4/assets/home.css
@@ -9,17 +9,40 @@
 	display: inline-block;
 	width:230px;
 	height:500px;
-	margin-left:300px;
+	margin-left:340px;
 	margin-top:30px;
 
 }
 
 .how {
-	width: 500px;
+	width: 350px;
 	height: 500px;
 	display: inline-block;
-	margin-left: 20px;
-	background-color: yellow;
+	margin-left: 50px;
+	margin-top: 40px;
+	/*background-color: black;*/
+	vertical-align: top;
 }
 
+.how h1 {
+	font-family: 'Droid Sans', sans-serif;
+	color:white;
+	font-size: 45px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+}
 
+.how p {
+	font-family: 'Droid Sans', sans-serif;
+	color:white;
+	line-height: 1.2em;
+	font-size: 22px;
+}
+
+.caption p {
+	font-family: 'Droid Sans', sans-serif;
+	color:#147bf9;
+	letter-spacing: 0px;
+	line-height: 1.4em;
+	font-size: 12px;
+}
